--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "reduxecommerceproject",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://medidipeddisai.github.io/redux-ecommerce-project",
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -23,12 +22,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
-
-    "build":"CI=react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
