--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
+    "netlify": "^13.1.14",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build":"CI=react-scripts build",
+    "build": "CI=react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
